--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Build vue and deploy to S3
 run-name: Build and deploy to S3 by @${{ github.actor }}
-on: [push]
+on: [push, workflow_dispatch]
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
